# homelab-agent

./: .env.example  README.md  pyproject.toml  test.db
src/homelab_agent/: __init__.py  agent.py  cli.py  config.py  constants.py  logging.py  version.py
src/homelab_agent/api/: __init__.py  client.py  server.py
src/homelab_agent/channels/: __init__.py  base.py  factory.py  telegram.py  tui.py
src/homelab_agent/commands/: __init__.py  init.py  service.py  tui.py
src/homelab_agent/llm/: __init__.py  base.py  factory.py  google_adk.py  openai.py
src/homelab_agent/memory/: __init__.py  service.py
src/homelab_agent/service/: __init__.py  manager.py
src/homelab_agent/services/: __init__.py  image_analysis.py  transcription.py
src/homelab_agent/tools/: __init__.py  clones.py  files.py  instructions.py  memory.py  reasoning.py  scheduler.py  shell.py
src/homelab_agent/tui/: __init__.py  chat.py
src/homelab_agent/utils/: __init__.py  database.py  tool_logger.py  tool_notifications.py
src/homelab_agent/webui/: __init__.py
src/homelab_agent/webui/frontend/: vite.config.ts
src/homelab_agent/webui/frontend/src/: App.css  App.tsx  index.css
src/homelab_agent/webui/frontend/src/components/: ChatContainer.css  ChatContainer.tsx  Header.css  Header.tsx  InputArea.css  InputArea.tsx  Message.css  Message.tsx  SessionBrowser.css  SessionBrowser.tsx  SessionPicker.css  SessionPicker.tsx  Sidebar.css  (+4 more)
src/homelab_agent/webui/static/: index.html
src/homelab_agent/webui/static/assets/: index-BB6IfuzF.js  index-BV-XVq0H.js  index-Dy3giCTv.css  index-Gk-nNnzX.css
